# uvc_camera

./: CMakeLists.txt  Makefile  README.md
examples/: camera_intrinsics.h  circular_frame_info_array.cpp  circular_frame_info_array.h  demo.cpp  demo.h  features.cpp  features.h  hackathon.cpp  imu.cpp  pose_calibration_uvc_camera.cpp  process_frame.cpp  process_frame.h  scale.cpp  scale.h  test_camera.cpp  test_uvc_camera.cpp  utils.cpp  utils.h
include/: camera.h  uvc_camera.h
src/: camera.cpp  colorspaces.cpp  colorspaces.h  uvc_camera.c  uvc_camera.cpp
